# bit-tower

./: .gitignore  Cargo.toml  README.md  bun.lockb  flake.nix  leptosfmt.toml  package.json  tailwind.config.js
.github/workflows/: main.yml
app/: Cargo.toml
app/src/: auth.rs  lib.rs
app/src/components/: example.rs  mod.rs  status_bar.rs  torrents.rs
app/src/signals/: mod.rs  syncstate.rs  use_sync_maindata.rs
fnord_ui/: Cargo.toml
fnord_ui/src/components/: button.rs  mod.rs  navbar.rs  view.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
leptos_sse/: Cargo.toml
leptos_sse/src/: lib.rs
qbittorrent_rs/: Cargo.toml
qbittorrent_rs/src/: lib.rs
qbittorrent_rs_proto/: Cargo.toml
qbittorrent_rs_proto/src/: lib.rs  sync.rs  torrents.rs  transfer.rs
qbittorrent_rs_sse/: Cargo.toml
qbittorrent_rs_sse/src/: axum.rs  lib.rs  signals.rs
server/: Cargo.toml
server/src/: fileserv.rs  handle_ws.rs  main.rs
src/: lib.rs  main.rs
src/app/: auth.rs  mod.rs
src/app/components/: mod.rs  status_bar.rs  torrents.rs
src/app/hooks/use_websocket/: mod.rs
src/app/routes/: mod.rs
src/app/signals/: syncstate.rs  use_sync_maindata.rs
src/app/ui/components/: button.rs  input.rs  navbar.rs  typography.rs
src/qbittorrent/: mod.rs
src/qbittorrent/client/: mod.rs
src/qbittorrent/proto/: sync.rs
src/server/: fileserv.rs  handle_ws.rs  hashed_stylesheet.rs  mod.rs  shell.rs
src/server/hydration/: hydration_script.js  mod.rs
style/: tailwind.css
use_websocket/: Cargo.toml
use_websocket/src/: lib.rs
use_websocket/src/core/: mod.rs
