[package]
name = "fnord-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
tracing.workspace = true
tailwind_fuse = { version = "0.3.1", features = ["variant"] }

# [dependencies.web-sys]
# version = "0.3"
# optional = true
# features = [
#     "CredentialCreationOptions",
#     "CredentialRequestOptions",
#     "CredentialsContainer",
#     "Navigator",
#     "PublicKeyCredential",
#     "PublicKeyCredentialCreationOptions",
# ]

[features]
default = []
hydrate = ["leptos/hydrate", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
