[package]
name = "qbittorrent-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qbittorrent-rs-proto = { path = "../qbittorrent_rs_proto" }
chrono.workspace = true
tracing.workspace = true
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = [
    "v4",
    "serde",
    "fast-rng",
    "macro-diagnostics",
    "v7",
    "js"
] }
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
