[package]
name = "qbittorrent-rs-sse"
version = "0.4.0"
edition = "2021"
description = "Leptos server signals synced through server-sent-events (SSE)"
repository = "https://github.com/messense/leptos_sse"
license = "MIT"
keywords = ["leptos", "server", "signal", "sse"]
categories = [
  "wasm",
  "web-programming",
  "web-programming::http-client",
  "web-programming::http-server",
]

[dependencies]
cfg-if = "1"
js-sys = "0.3.61"
json-patch = "1.0.0"
leptos.workspace = true
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.84", default-features = false }
web-sys = { version = "0.3.61", features = ["EventSource", "MessageEvent", "EventSourceInit"] }
pin-project-lite = "0.2.12"
tokio = { version = "1.36.0", optional = true }
tokio-stream = { version = "0.1.14", optional = true }
tracing.workspace = true
futures = { version = "0.3.28", default-features = false, optional = true }
qbittorrent-rs-proto = { path = "../qbittorrent_rs_proto" }
qbittorrent-rs = { path = "../qbittorrent_rs", optional = true }
anyhow.workspace = true

axum = { version = "0.7", default-features = false, features = [
  "tokio",
  "json",
], optional = true }

[features]
default = []
ssr = ["dep:axum", "dep:futures", "dep:tokio", "dep:tokio-stream", "dep:qbittorrent-rs"]

[package.metadata.docs.rs]
features = ["ssr"]
rustdoc-args = ["--cfg", "docsrs"]
