[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt"] }
qbittorrent-rs = { path = "../qbittorrent_rs" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
cookie = { version = "0.18.1", features = ["secure"] }
