[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_axum.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt"] }
qbittorrent-rs = { path = "../qbittorrent_rs" }
qbittorrent-rs-proto = { path = "../qbittorrent_rs_proto" }
qbittorrent-rs-sse = { path = "../qbittorrent_rs_sse", features = ["ssr"] }

anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
cookie = { version = "0.18.1", features = ["secure"] }
futures = "0.3.30"
tokio-stream = "0.1.15"
lazy_static = "1.4.0"
rust-embed = { version = "8", features = [
  "axum",
  "compression",
  "mime_guess",
  "tokio",
] }
mime_guess = "2.0.4" 
